<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>st.redline</groupId>
  <artifactId>redline</artifactId>
  <version>0.6-SNAPSHOT</version>
  <packaging>jar</packaging>
  
  <name>Redline Smalltalk</name>
  <description>Redline Smalltalk is a Smalltalk for the Java Virtual Machine, because nothing is as productive as Smalltalk, and the App has to run on the Java Virtual Machine.</description>
  <url>http://redline.st</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <url>git@github.com:strump/redline-smalltalk.git</url>
    <developerConnection>scm:git:git@github.com:strump/redline-smalltalk.git</developerConnection>
    <connection>scm:git:git@github.com:strump/redline-smalltalk.git</connection>
  </scm>

  <developers>
    <developer>
      <id>jamesladd</id>
      <name>James Ladd</name>
      <email>ladd.james@gmail.com</email>
    </developer>
  </developers>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <log4jVersion>2.13.3</log4jVersion>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-maven-plugin</artifactId>
      <version>4.8</version>
    </dependency>
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>4.8</version>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>6.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4jVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4jVersion}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>1.3.2</version>
    </dependency>
  </dependencies>

  <build>
    <defaultGoal>install</defaultGoal>
    <resources>
      <resource>
        <directory>${project.basedir}/src/main/smalltalk</directory>
        <includes>
          <include>**/*.st</include>
        </includes>
      </resource>
      <resource>
        <directory>${project.basedir}/src/main/resources</directory>
      </resource>
      <resource>
        <directory>${project.basedir}/src/test/resources</directory>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>${project.basedir}/src/test/java</directory>
        <includes>
          <include>**/*.st</include>
        </includes>
      </testResource>
      <testResource>
        <directory>${project.basedir}/src/test/smalltalk</directory>
        <includes>
          <include>**/*.st</include>
        </includes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-maven-plugin</artifactId>
        <version>4.1</version>
        <executions>
          <execution>
            <goals>
              <goal>antlr4</goal>
            </goals>
            <configuration>
              <visitor>true</visitor>
              <listener>false</listener>
              <outputDirectory>${project.build.directory}/generated-sources/st/redline/compiler/generated</outputDirectory>
              <arguments>
                <argument>-package</argument>
                <argument>st.redline.compiler.generated</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.3</version>
        <configuration>
          <createDependencyReducedPom>false</createDependencyReducedPom>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <artifactSet>
                <excludes>
                  <exclude>org.antlr:antlr4-maven-plugin:*</exclude>
                  <exclude>org.antlr:antlr-runtime:*</exclude>
                  <exclude>org.antlr:antlr4:*</exclude>
                  <exclude>antlr:antlr:*</exclude>
                  <exclude>org.antlr:stringtemplate:*</exclude>
                  <exclude>org.antlr:ST4:*</exclude>
                  <exclude>org.sonatype.sisu:*</exclude>
                  <exclude>org.codehaus.plexus:*</exclude>
                  <exclude>org.apache.maven.wagon:*</exclude>
                  <exclude>classworlds:*</exclude>
                  <exclude>junit:*</exclude>
                  <exclude>org.apache.maven:*</exclude>
                  <exclude>log4j:*</exclude>
                  <exclude>backport-util-concurrent:*</exclude>
                </excludes>
              </artifactSet>
              <transformers>
                <transformer
                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>st.redline.Stic</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  
  <profiles>
    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.2.1</version>
            <executions>
              <execution>
                <phase>integration-test</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <executable>java</executable>
                  <workingDirectory>${project.build.directory}</workingDirectory>
                  <arguments>
                    <argument>-cp</argument>
                    <argument>classes${path.separator}test-classes${path.separator}lib/antlr-runtime-3.4.jar${path.separator}lib/asm-4.1.jar</argument>
                    <argument>st.redline.Stic</argument>
                    <argument>st.redline.kernel.TestRunner</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
            <configuration>
              <workingDirectory>${project.build.directory}</workingDirectory>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>no-tests</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <skip>true</skip>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>release-sign-artifacts</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.4</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>    
    </profile>
  </profiles>
</project>
